--- a/example.ipynb
+++ b/example.ipynb
@@ -6,10 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Core.requirments import *\n",
-    "from Core.unit import decode_text_from_image\n",
-    "from Core.unit import encode_text_into_image\n",
-    "from Core.unit import compare_text"
+    "from PixelWhisper.dependency import *\n",
+    "from PixelWhisper.unit import decode_text_from_image\n",
+    "from PixelWhisper.unit import encode_text_into_image\n",
+    "from PixelWhisper.unit import compare_text"
    ]
   },
   {
