--- a/example.ipynb
+++ b/example.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from PixelWhisper.dependency import *\n",
+    "from PixelWhisper.dependencies import *\n",
     "from PixelWhisper.unit import decode_text_from_image\n",
     "from PixelWhisper.unit import encode_text_into_image\n",
     "from PixelWhisper.unit import compare_text"
