--- a/test.ipynb
+++ b/test.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Core.requirments import *"
+    "from PixelWhisper import *"
    ]
   },
   {
